--- a/.github/workflows/create-a-release.yml
+++ b/.github/workflows/create-a-release.yml
@@ -9,8 +9,8 @@ on:
         required: true
 
 jobs:
-  autopr:
-    if: ${{ (github.actor == 'sh-ravan') || (github.actor == 'kdyadav') || (github.actor == 'Anil-Pujeri') || (github.actor == 'saideeptalari') }}
+  release:
+    if: ${{ (github.actor == 'somasekharkakarla') || (github.actor == 'Anil-Pujeri') || (github.actor == 'saideeptalari') || (github.actor == 'sh-ravan') }}
     runs-on: ubuntu-latest
 
     steps:
@@ -36,7 +36,7 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           FROM_BRANCH: "v${{ github.event.inputs.version }}"
           TO_BRANCH: "production"
-          PULL_REQUEST_TITLE: "chore: merge v${{ github.event.inputs.version }} into production"
+          PULL_REQUEST_TITLE: "chore(release): merge v${{ github.event.inputs.version }} into production"
           PULL_REQUEST_BODY: "v${{ github.event.inputs.version }} → production"
 
       - run: echo "⏹ End of job. Status - ${{ job.status }}."
