--- a/.github/workflows/automatic-label-prs.yml
+++ b/.github/workflows/automatic-label-prs.yml
@@ -20,10 +20,8 @@ jobs:
       - name: Check if PR is of hotfix type
         id: check
         run: |
-          if [[ $GITHUB_HEAD_REF == hotfix* ]] && [[ $GITHUB_BASE_REF == pre-prod ]]; then
+          if [[ $GITHUB_HEAD_REF == hotfix* ]]; then
             echo "hotfix=true" >> $GITHUB_OUTPUT
-          elif [[ $GITHUB_HEAD_REF == cherry* ]] && [[ $GITHUB_BASE_REF == pre-prod ]]; then
-            echo "cherry=true" >> $GITHUB_OUTPUT
           fi
 
       - name: Add the hotfix label
@@ -37,19 +35,6 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               labels: ['hotfix']
-            })
-
-      - name: Add the cherry label
-        if: steps.check.outputs.cherry == 'true'  
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            github.rest.issues.addLabels({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              labels: ['cherry']
             })
 
       - run: echo "⏹ End of job. Status - ${{ job.status }}."
